# AoC2020

./: adventofcode.cabal  benchmark_results.html  dia01-completo.html
src/: Bench.hs  Problem01.hs  Problem02.hs  Problem03.hs  Problem04.hs  Problem05.hs  Problem06.hs
