name:                adventofcode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bench
  ghc-options:         -Wall -O3 -main-is Bench
  hs-source-dirs:      src
  main-is:             Bench.hs
  other-modules:       Problem01
                     , Problem02
                     , Problem03
                     , Problem04
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , criterion
                     , containers
                     , unordered-containers
                     , vector
                     , vector-algorithms
                     , array
                     , split

executable problem01
  ghc-options:         -Wall -O3 -main-is Problem01
  main-is:             Problem01.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unordered-containers
                     , vector
                     , vector-algorithms
                     , array

executable problem02
  ghc-options:         -Wall -O3 -main-is Problem02
  main-is:             Problem02.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split

executable problem03
  ghc-options:         -Wall -O3 -main-is Problem03
  main-is:             Problem03.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable problem04
  ghc-options:         -Wall -O3 -main-is Problem04
  main-is:             Problem04.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
